--- a/PnP Character Nexus/PnP Character Nexus.csproj
+++ b/PnP Character Nexus/PnP Character Nexus.csproj
@@ -99,11 +99,14 @@
     <Compile Include="Events\OpenApplication.cs" />
     <Compile Include="Events\Print.cs" />
     <Compile Include="Interfaces\ICharacterVisitor.cs" />
+    <Compile Include="Utility\ConvertStringToImageSource.cs" />
+    <Compile Include="Utility\RelayCommand.cs" />
+    <Compile Include="ViewModel\WelcomeScreenViewModel.cs" />
     <Compile Include="Views\CharacterEdit.xaml.cs">
       <DependentUpon>CharacterEdit.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ruleset.cs" />
+    <Compile Include="Models\Ruleset.cs" />
     <Compile Include="Storage\Data.cs" />
     <Compile Include="Storage\Source.cs" />
     <Compile Include="Views\Start.xaml.cs">
@@ -121,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Arrow_Button.png" />
+    <Content Include="Assets\defaultbg.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
